2018-06-07  Justin Fan  <justin_fan@apple.com>

        Import the 2.0.0 version of Khronos WebGL conformance suite
        https://bugs.webkit.org/show_bug.cgi?id=181293
        <rdar://problem/40654103>

        Reviewed by Dean Jackson.

        Original description and patch by Zan Dobersek <zdobersek@igalia.com>. 
        Retrying patch with up-to-date revision of conformance suite:

        "Import the 2.0.0 version of the WebGL conformance suite that's
        maintained under the Khronos organization on GitHub:
        https://github.com/KhronosGroup/WebGL.git

        The following revision of this repository has been used for importing:
        8ea92581353d18f50d25159489897ae634eb23b1

        For importing purposes, the generate-webgl-tests.py script is modified
        to import tests at version 2.0.0 or below. 2.0 is now used as the
        default version for importing purposes. Additionally, the
        GreaterThanOrEqualToVersion function is fixed to correctly compare 2.x
        versions against 1.x.

        The following generate-webgl-tests.py invocation was used:
        $ python generate-webgl-tests.py -e -w ~/WebGL/conformance-suites/2.0.0

        The 2.0.0 version of the conformance suite is composed of three parts:
        - tests under conformance/ cover WebGL1 functionality,
        - tests under conformance2/ cover WebGL2 functionality,
        - tests under deqp/ are a port of the dEQP suite.
        webkit-webgl-test-harness.js file is added under webgl/2.0.0/resources/
        to properly integrate the imported tests with the WebKit testing
        facilities.

        The complete suite is for now skipped on all platforms. WebGL1 tests
        should be passing in majority, with failures in that part of the suite
        mirroring the ones experienced in the current 1.0.2 and 1.0.3 suites.
        The WebGL2 support is still incomplete, and the conformance2/ pass rate