@@ -1,3 +1,15 @@
+2018-06-12  Ryan Haddad  <ryanhaddad@apple.com>
+
+        Unreviewed, rolling out r232774.
+
+        Breaks internal builds.
+
+        Reverted changeset:
+
+        "Complex text handling should opt out of bounded text layout."
+        https://bugs.webkit.org/show_bug.cgi?id=186571
+        https://trac.webkit.org/changeset/232774
+
 2018-06-12  Ryosuke Niwa  <rniwa@webkit.org>
 
         iOS WK1: Occasional crash in FrameView::setScrollPosition
